seaqt/QtWidgets/gen_qtoolbox.h

class QIcon;
class QMetaObject;
class QToolBox;
class QWidget;
typedef struct QChildEvent QChildEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QIcon QIcon;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QTimerEvent QTimerEvent;
typedef struct QToolBox QToolBox;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QToolBox_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QToolBox_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QToolBox_override_virtual_dropEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QToolBox_override_virtual_hideEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QToolBox_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QToolBox_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QToolBox_override_virtual_metric(void* self, intptr_t slot);
int QToolBox_virtualbase_metric(const void* self, int param1);
bool QToolBox_override_virtual_initPainter(void* self, intptr_t slot);
void QToolBox_virtualbase_initPainter(const void* self, QPainter* painter);
bool QToolBox_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QToolBox_virtualbase_redirected(const void* self, QPoint* offset);
bool QToolBox_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QToolBox_virtualbase_sharedPainter(const void* self);
bool QToolBox_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QToolBox_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QToolBox_virtualbase_inputMethodQuery(const void* self, int param1);
bool QToolBox_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QToolBox_virtualbase_focusNextPrevChild(void* self, bool next);
bool QToolBox_override_virtual_eventFilter(void* self, intptr_t slot);
bool QToolBox_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QToolBox_override_virtual_timerEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QToolBox_override_virtual_childEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_childEvent(void* self, QChildEvent* event);
bool QToolBox_override_virtual_customEvent(void* self, intptr_t slot);
void QToolBox_virtualbase_customEvent(void* self, QEvent* event);
bool QToolBox_override_virtual_connectNotify(void* self, intptr_t slot);
void QToolBox_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QToolBox_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QToolBox_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QToolBox_staticMetaObject();
void QToolBox_delete(QToolBox* self);