seaqt/QtWidgets/gen_qtoolbox.nim

proc fQToolBox_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_dragMoveEvent".}
proc fcQToolBox_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_dragMoveEvent".}
proc fQToolBox_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_dragLeaveEvent".}
proc fcQToolBox_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_dragLeaveEvent".}
proc fQToolBox_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_dropEvent".}
proc fcQToolBox_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_dropEvent".}
proc fQToolBox_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_hideEvent".}
proc fcQToolBox_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_hideEvent".}
proc fQToolBox_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QToolBox_virtualbase_nativeEvent".}
proc fcQToolBox_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_nativeEvent".}
proc fQToolBox_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QToolBox_virtualbase_metric".}
proc fcQToolBox_override_virtual_metric(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_metric".}
proc fQToolBox_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QToolBox_virtualbase_initPainter".}
proc fcQToolBox_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_initPainter".}
proc fQToolBox_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QToolBox_virtualbase_redirected".}
proc fcQToolBox_override_virtual_redirected(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_redirected".}
proc fQToolBox_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QToolBox_virtualbase_sharedPainter".}
proc fcQToolBox_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_sharedPainter".}
proc fQToolBox_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QToolBox_virtualbase_inputMethodEvent".}
proc fcQToolBox_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_inputMethodEvent".}
proc fQToolBox_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QToolBox_virtualbase_inputMethodQuery".}
proc fcQToolBox_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_inputMethodQuery".}
proc fQToolBox_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QToolBox_virtualbase_focusNextPrevChild".}
proc fcQToolBox_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_focusNextPrevChild".}
proc fQToolBox_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QToolBox_virtualbase_eventFilter".}
proc fcQToolBox_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_eventFilter".}
proc fQToolBox_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_timerEvent".}
proc fcQToolBox_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_timerEvent".}
proc fQToolBox_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_childEvent".}
proc fcQToolBox_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_childEvent".}
proc fQToolBox_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QToolBox_virtualbase_customEvent".}
proc fcQToolBox_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_customEvent".}
proc fQToolBox_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QToolBox_virtualbase_connectNotify".}
proc fcQToolBox_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_connectNotify".}
proc fQToolBox_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QToolBox_virtualbase_disconnectNotify".}
proc fcQToolBox_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QToolBox_override_virtual_disconnectNotify".}
proc fcQToolBox_staticMetaObject(): pointer {.importc: "QToolBox_staticMetaObject".}
proc fcQToolBox_delete(self: pointer) {.importc: "QToolBox_delete".}


func init*(T: type gen_qtoolbox_types.QToolBox, h: ptr cQToolBox): gen_qtoolbox_types.QToolBox =
  T(h: h)
proc create*(T: type gen_qtoolbox_types.QToolBox, parent: gen_qwidget_types.QWidget): gen_qtoolbox_types.QToolBox =
  gen_qtoolbox_types.QToolBox.init(fcQToolBox_new(parent.h))

proc create*(T: type gen_qtoolbox_types.QToolBox, ): gen_qtoolbox_types.QToolBox =
  gen_qtoolbox_types.QToolBox.init(fcQToolBox_new2())

proc create*(T: type gen_qtoolbox_types.QToolBox, parent: gen_qwidget_types.QWidget, f: cint): gen_qtoolbox_types.QToolBox =
  gen_qtoolbox_types.QToolBox.init(fcQToolBox_new3(parent.h, cint(f)))

proc metaObject*(self: gen_qtoolbox_types.QToolBox, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQToolBox_metaObject(self.h))

proc metacast*(self: gen_qtoolbox_types.QToolBox, param1: cstring): pointer =
  fcQToolBox_metacast(self.h, param1)

proc metacall*(self: gen_qtoolbox_types.QToolBox, param1: cint, param2: cint, param3: pointer): cint =
  fcQToolBox_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qtoolbox_types.QToolBox, s: cstring): string =
  let v_ms = fcQToolBox_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc addItem*(self: gen_qtoolbox_types.QToolBox, widget: gen_qwidget_types.QWidget, text: string): cint =
  fcQToolBox_addItem(self.h, widget.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc addItem*(self: gen_qtoolbox_types.QToolBox, widget: gen_qwidget_types.QWidget, icon: gen_qicon_types.QIcon, text: string): cint =
  fcQToolBox_addItem2(self.h, widget.h, icon.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc insertItem*(self: gen_qtoolbox_types.QToolBox, index: cint, widget: gen_qwidget_types.QWidget, text: string): cint =
  fcQToolBox_insertItem(self.h, index, widget.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc insertItem*(self: gen_qtoolbox_types.QToolBox, index: cint, widget: gen_qwidget_types.QWidget, icon: gen_qicon_types.QIcon, text: string): cint =
  fcQToolBox_insertItem2(self.h, index, widget.h, icon.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc removeItem*(self: gen_qtoolbox_types.QToolBox, index: cint): void =
  fcQToolBox_removeItem(self.h, index)

proc setItemEnabled*(self: gen_qtoolbox_types.QToolBox, index: cint, enabled: bool): void =
  fcQToolBox_setItemEnabled(self.h, index, enabled)

proc isItemEnabled*(self: gen_qtoolbox_types.QToolBox, index: cint): bool =
  fcQToolBox_isItemEnabled(self.h, index)

proc setItemText*(self: gen_qtoolbox_types.QToolBox, index: cint, text: string): void =
  fcQToolBox_setItemText(self.h, index, struct_miqt_string(data: text, len: csize_t(len(text))))

proc itemText*(self: gen_qtoolbox_types.QToolBox, index: cint): string =
  let v_ms = fcQToolBox_itemText(self.h, index)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setItemIcon*(self: gen_qtoolbox_types.QToolBox, index: cint, icon: gen_qicon_types.QIcon): void =
  fcQToolBox_setItemIcon(self.h, index, icon.h)

proc itemIcon*(self: gen_qtoolbox_types.QToolBox, index: cint): gen_qicon_types.QIcon =
  gen_qicon_types.QIcon(h: fcQToolBox_itemIcon(self.h, index))

proc setItemToolTip*(self: gen_qtoolbox_types.QToolBox, index: cint, toolTip: string): void =
  fcQToolBox_setItemToolTip(self.h, index, struct_miqt_string(data: toolTip, len: csize_t(len(toolTip))))

proc itemToolTip*(self: gen_qtoolbox_types.QToolBox, index: cint): string =
  let v_ms = fcQToolBox_itemToolTip(self.h, index)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc currentIndex*(self: gen_qtoolbox_types.QToolBox, ): cint =
  fcQToolBox_currentIndex(self.h)

proc currentWidget*(self: gen_qtoolbox_types.QToolBox, ): gen_qwidget_types.QWidget =
  gen_qwidget_types.QWidget(h: fcQToolBox_currentWidget(self.h))

proc widget*(self: gen_qtoolbox_types.QToolBox, index: cint): gen_qwidget_types.QWidget =
  gen_qwidget_types.QWidget(h: fcQToolBox_widget(self.h, index))

proc indexOf*(self: gen_qtoolbox_types.QToolBox, widget: gen_qwidget_types.QWidget): cint =
  fcQToolBox_indexOf(self.h, widget.h)

proc count*(self: gen_qtoolbox_types.QToolBox, ): cint =
  fcQToolBox_count(self.h)

proc setCurrentIndex*(self: gen_qtoolbox_types.QToolBox, index: cint): void =
  fcQToolBox_setCurrentIndex(self.h, index)

proc setCurrentWidget*(self: gen_qtoolbox_types.QToolBox, widget: gen_qwidget_types.QWidget): void =
  fcQToolBox_setCurrentWidget(self.h, widget.h)

proc currentChanged*(self: gen_qtoolbox_types.QToolBox, index: cint): void =
  fcQToolBox_currentChanged(self.h, index)

type QToolBoxcurrentChangedSlot* = proc(index: cint)
proc miqt_exec_callback_QToolBox_currentChanged(slot: int, index: cint) {.exportc.} =
  let nimfunc = cast[ptr QToolBoxcurrentChangedSlot](cast[pointer](slot))
  let slotval1 = index

  nimfunc[](slotval1)

proc oncurrentChanged*(self: gen_qtoolbox_types.QToolBox, slot: QToolBoxcurrentChangedSlot) =
  var tmp = new QToolBoxcurrentChangedSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQToolBox_connect_currentChanged(self.h, cast[int](addr tmp[]))

proc tr*(_: type gen_qtoolbox_types.QToolBox, s: cstring, c: cstring): string =
  let v_ms = fcQToolBox_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr*(_: type gen_qtoolbox_types.QToolBox, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQToolBox_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc QToolBoxmetaObject*(self: gen_qtoolbox_types.QToolBox, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fQToolBox_virtualbase_metaObject(self.h))

type QToolBoxmetaObjectProc* = proc(): gen_qobjectdefs_types.QMetaObject
proc onmetaObject*(self: gen_qtoolbox_types.QToolBox, slot: QToolBoxmetaObjectProc) =
  # TODO check subclass
  var tmp = new QToolBoxmetaObjectProc
  tmp[] = slot
  GC_ref(tmp)
  fcQToolBox_override_virtual_metaObject(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QToolBox_metaObject(self: ptr cQToolBox, slot: int): pointer {.exportc: "miqt_exec_callback_QToolBox_metaObject ".} =
  var nimfunc = cast[ptr QToolBoxmetaObjectProc](cast[pointer](slot))

  let virtualReturn = nimfunc[]( )

  virtualReturn.h
proc QToolBoxmetacast*(self: gen_qtoolbox_types.QToolBox, param1: cstring): pointer =
  fQToolBox_virtualbase_metacast(self.h, param1)

type QToolBoxmetacastProc* = proc(param1: cstring): pointer
proc onmetacast*(self: gen_qtoolbox_types.QToolBox, slot: QToolBoxmetacastProc) =
  # TODO check subclass
  var tmp = new QToolBoxmetacastProc
  tmp[] = slot
  GC_ref(tmp)
  fcQToolBox_override_virtual_metacast(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QToolBox_metacast(self: ptr cQToolBox, slot: int, param1: cstring): pointer {.exportc: "miqt_exec_callback_QToolBox_metacast ".} =
  var nimfunc = cast[ptr QToolBoxmetacastProc](cast[pointer](slot))
  let slotval1 = (param1)


  let virtualReturn = nimfunc[](slotval1 )
